Lab11 16/App3/app3-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deploy
spec:
  selector:
    matchLabels:
      app: app3
      version: v1
  template:
    metadata:
      labels:
        app: app3
        version: v1
    spec:
      containers:
      - name: app3
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name:  app3-volume
          mountPath:  /usr/share/nginx/html
      volumes:
      - name:  app3-volume
        configMap:
          name: app3-configmap
