Lab11 16/App3/app3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
spec:
  selector:
    app: app3
  ports:
  - name: http-default
    port: 80
