Lab11 16/App3/app3-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app3-destinationrules
spec:
  host: app3-svc.default.svc.cluster.local
  subsets:
  - name: app3-v1-subset
    labels:
      app: app3
      version: v1
